# drop-of-a-cat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  vercel.json
.github/workflows/: deploy.yml
api/: Cargo.toml  hello.rs  home.rs  login.rs  suggestion.rs
api/event/: [uuid].rs
api/src/: lib.rs
api_utils/: Cargo.toml
api_utils/src/: lib.rs
app/: Cargo.toml  Trunk.toml  index.css  index.html  tailwind.config.js
app/src/: app.rs  main.rs
app/src/api/: mod.rs
app/src/components/: back_btn.rs  countdown.rs  event_card.rs  mod.rs  navbar.rs  theme_controller.rs
app/src/pages/: event.rs  home.rs  login.rs  mod.rs  not_found.rs  suggestion.rs
app/src/router/: guards.rs  mod.rs
db/: Cargo.toml
db/src/: client.rs  lib.rs
db/src/collections/: event.rs  user.rs
dto/: Cargo.toml
dto/src/: api.rs  collections.rs  lib.rs
