[package]
name = "api"
edition = "2021"
version = "0.1.0"

[dependencies]
dto = { path = "../dto" }

http = "1.3.1"
tokio = { version = "1.46.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
vercel_runtime = "1.1.6"
dotenvy_macro = "0.15.7"

[[bin]]
name = "login"
path = "login.rs"
