[package]
name = "drop-of-a-cat"
edition = "2021"
version = "0.1.0"

[dependencies]
dto = { path = "../dto" }

yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-storage = "0.3.0"
gloo-net = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = ["console"]
